# LiftPlannerPro

./: CMakeLists.txt  PROJECT_OVERVIEW.md  README.md  build.sh
resources/: icons.qrc  styles.qrc
resources/styles/: dark_theme.qss
src/: CADApplication.cpp  CADApplication.h  CommandManager.cpp  CommandManager.h  GeometryEngine.cpp  GeometryEngine.h  LayerManager.h  MainWindow.cpp  MainWindow.h  ObjectSnaps.h  main.cpp
src/ui/: DockablePalettes.h  RibbonInterface.cpp  RibbonInterface.h  StatusBar.h  ViewportManager.h
